<resources>
    <string name="app_name">KataHira</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_guess">Guess</string>
    <string name="settings">Settings</string>

    <string name="view_katakana">View Katakana Characters</string>
    <string name="katakana">Katakana Characters</string>
    <string name="info_kata">The word katakana means \"fragmentary kana\", as the katakana characters are derived from components or fragments of more complex kanji.\nKatakana is most often used for transcription of words from foreign languages, loanwords, or onomatopoeia to represent sounds.</string>
    <string name="view_hiragana">View Hiragana Characters</string>
    <string name="hiragana">Hiragana Characters</string>
    <string name="info_hira">The word hiragana literally means "flowing" or "simple" kana (\"simple\" originally as contrasted with kanji).\nHiragana is used mainly for grammatical purposes. It is used on its own or in conjunction with kanji to form words.</string>
    <string name="diacritic_characters">Diacritic Characters</string>
    <string name="basic_characters">Basic Characters</string>

    <string name="phrase">Basic Greetings &amp; Phrases</string>
    <string name="info_phrases">Some basic Japanese greetings and phrases.</string>
    <string name="view_greetings">View Basic Greetings</string>
    <string name="indicator">Japanese:\nRomaji:\nEnglish:</string>
    <string name="WcGmWnHf">Japanese:\n\nRomaji:\n\nEnglish:</string>
    <string name="basic_greetings">Basic Greetings</string>
    <string name="greeting1"><b>はい</b>\nHai\nYes</string>
    <string name="greeting2"><b>いいえ</b>\nIie\nNo</string>
    <string name="greeting3"><b>おねがいします</b>\nOnegai shimasu\nPlease</string>
    <string name="greeting4"><b>ありがとう</b>\nArigatou\nThank you</string>
    <string name="greeting5"><b>どういたしまして</b>\nDouitashimashite\nYou\'re welcome</string>
    <string name="greeting6"><b>すみません</b>\nSumimasen\nExcuse me</string>
    <string name="greeting7"><b>ごめんなさい</b>\nGomennasai\nI am sorry</string>
    <string name="greeting8"><b>わかりません</b>\nWakarimasen\nI don\'t understand</string>
    <string name="greeting9"><b>しりません</b>\nShirimasen\nI don\’t know</string>
    <string name="greeting10"><b>ただいま</b>\nTadaima\nI\'ve come back</string>
    <string name="view_phrases">View Basic Phrases</string>
    <string name="basic_phrases">Basic Phrases</string>
    <string name="phrase1"><b>おはようございます</b>\nOhayou gozaimasu\nGood morning</string>
    <string name="phrase2"><b>こんばんは</b>\nKonbanwa\nGood evening</string>
    <string name="phrase3"><b>おやすみなさい</b>\nOyasumi nasai\nGood night</string>
    <string name="phrase4"><b>おなまえはなんですか？</b>\nO-namae wa nan desu ka?\nWhat is your name?</string>
    <string name="phrase5"><b>おげんきですか？</b>\nO-genki desu ka?\nHow are you?</string>
    <string name="phrase6"><b>げんきです</b>\nGenki desu\nI\'m fine</string>
    <string name="phrase7"><b>はじめまして</b>\nHajimemashite\nNice to meet you</string>
    <string name="phrase8"><b>ようこそ</b>\nYoukoso\nWelcome</string>
    <string name="phrase9"><b>こんにちは</b>\nKonnichiwa\nHello</string>
    <string name="phrase10"><b>さようなら</b>\nSayounara\nGoodbye</string>

    <string name="zero">0</string>
    <string name="score">Score</string>
    <string name="attempts">Attempts</string>
    <string name="time">Time</string>
    <string name="initTime">00m:00s</string>
    <string name="option1"><u>Select Option</u></string>
    <string name="option2">Katakana to Romaji</string>
    <string name="option3">Hiragana to Romaji</string>
    <string name="default_character">〇</string>
    <string name="generate_character">Generate Character</string>
    <string name="choices"><u>Choices</u></string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="result">Result</string>

    <string name="welcome_toast">Welcome!</string>
    <string name="invalid_option_toast">Please select an option.</string>
    <string name="start_session">Session Start!</string>
    <string name="correct_toast">Correct! Generate again.</string>r
    <string name="zero_attempts_toast">Press Reset to try again.</string>
    <string name="wrong_toast">Wrong. Answer should be \'%s\'.</string>
    <string name="save_close">Save &amp; Close</string>
    <string name="close">Close</string>
    <string name="view_history">View History</string>
    <string name="date">Date &amp; Time:</string>
    <string name="mistakes">Mistakes</string>
    <string name="syllabary">Syllabary:</string>
    <string name="profile">Profile:</string>
    <string name="current_rank">Guessing Rank:</string>
    <string name="total_session">Guessing Sessions:</string>
    <string name="history">History</string>
    <string name="tutorial">Tutorial</string>

    <string name="empty_name">Profile Name cannot be empty.</string>
    <string name="profile_name">Profile Name</string>
    <string name="add_new_profile">Add New Profile</string>
    <string name="add">Add</string>
    <string name="profile_exist">Profile name already exist.</string>
    <string name="profile_added">Profile added. Select your profile to record your progress.</string>
    <string name="rename_profile">Rename Profile</string>
    <string name="set">Set</string>
    <string name="profile_renamed">Profile renamed.</string>
    <string name="profile_unique">Profile name must be unique.</string>
    <string name="select_profile">Select profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile_deleted">Profile deleted.</string>
    <string name="confirm_delete">Are you sure you want to delete \'%s\'?</string>
    <string name="select_delete">Select a Profile to Delete</string>
    <string name="select_rename">Select a Profile to Rename</string>
    <string name="select">Select</string>
    <string name="require_add">Add a profile first.</string>

    <string name="tts_playing">Playing…</string>
    <string name="require_select">Select a Profile</string>
    <string name="n_a">N/A</string>
    <string name="overview">Overview</string>
    <string name="recent_session">Recent Session</string>
    <string name="session_history">Session History</string>

    <string name="tutorial_title">Tutorial: How to Play?</string>
    <string name="guess1">You can pick a syllabary whether Katakana or Hiragana to guess the characters. After selecting, press the Generate Character button to get a random character.</string>
    <string name="guess2">You will be given three random choices in Romaji (Roman alphabet of Japanese characters) to the random Japanese character. Only one choice will contain the correct answer.</string>
    <string name="guess3">Note: The correct answer will be highlighted in Lime green while the wrong choice will be highlighted in Red. A toast will show of what is the correct answer to the Japanese character.</string>
    <string name="guess4">After selecting a choice, you can play the audio of how the character is pronounced by pressing the Speaker button.</string>
    <string name="guess5"><![CDATA[Results will show after all of your attempts have been used up. Pressing the Save & Close will record the session and display on the history.]]></string>
    <string name="guess6">Note: You can try again by pressing the Reset button to start another guessing session.</string>
    <string name="guess7">Note: If you pressed the Back button and exited while the guessing session has already started, the session will not be saved.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="exit_not_saved">Are you sure you want to exit? Your session will not be saved.</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="reset_dialog">Are you sure you want to reset?</string>

    <string name="profile_add">Add a profile</string>
    <string name="profile_rename">Rename a profile</string>
    <string name="profile_delete">Delete a profile</string>
    <string name="rank_prerequisite">Rank Prerequisites</string>
    <string name="ranks">– <b>Master:</b> achieved 5 perfects each in Katakana and Hiragana\n–  <b>Expert:</b> achieved 3 to 4 perfects each in Katakana and Hiragana\n–  <b>Intermediate:</b> achieved 1 to 2 perfects each in Katakana and Hiragana\n–  <b>Beginner:</b> haven\'t yet to achieve any (0) perfects in Katakana or Hiragana</string>
    <string name="pronun_progress">Pronunciation Progress</string>
    <string name="profile1">You can create and select profiles to record your guessing session of Katakana and/or Hiragana and also able to record your pronunciation progress of Japanese phrases.</string>
    <string name="profile2">To create a profile, tap the user icon and give it a name.</string>
    <string name="profile3">Selecting the created profile will make you able to guess the Katakana or Hiragana characters and initiating the Guessing menu by tapping the button.</string>
    <string name="profile4">You can also rename a profile\'s name if you made a mistake or you just don\'t like the profile name, the choice is yours!</string>
    <string name="profile5">You can also delete a profile if you don\'t want that profile to exist.</string>
    <string name="greetings">Greetings:</string>
    <string name="phrases">Phrases:</string>
    <string name="zero_10">0/10</string>
    <string name="current_profile">Current Profile: </string>
    <string name="progress">Progress: </string>
    <string name="grant">Grant</string>
    <string name="granted_perm">Permission Granted. You can now use this feature.</string>
    <string name="request_perm">Please grant permission to use this feature.</string>
    <string name="require_profile">Mic icons will be available if you selected a profile in Dashboard menu.</string>
    <string name="profile_selected">\'%s\' is now selected.</string>
    <string name="profiles_title">Profiles: Create, Select, Edit, Delete</string>
    <string name="listen_ongoing">Listening…</string>
    <string name="stop">Stop</string>
    <string name="listen_end">Listening ended.</string>
    <string name="correct_pronunciation">Correct Pronunciation.</string>
    <string name="incorrect_pronunciation">Incorrect Pronunciation, try again.</string>
    <string name="prompt_exit">Press BACK again to exit.</string>
    <string name="help_profile">Profile is required to record pronunciation progress. (Click anywhere to close.)</string>
    <string name="help_progress">Current progress of correct pronunciations. (Click anywhere to close.)</string>
    <string name="pronunciation1">You can try to pronounce the Japanese phrases by tapping the Mic icon. Note that you need to select a profile first in Dashboard menu.</string>
    <string name="pronunciation2">After tapping the Mic icon, it will ask permission to record audio (if launched for first time) for listening to the voice and evaluate it whether the pronunciation is correct or not.</string>
    <string name="pronunciation3">If the evaluation of the pronunciation was correct, a Check icon will show at the end of the Japanese phrase container indicating that the pronunciation was correct and done.</string>
    <string name="pronunciation4">You can also listen how the Japanese phrases sounds by tapping the Speaker icon.</string>
    <string name="pronunciation_title">Pronunciation of Japanese Phrases</string>
</resources>