<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/kata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rec"
        android:elevation="2dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="50dp"
        android:text="@string/info_kata"
        android:textSize="18sp" />

    <Button
        android:id="@+id/showKata"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/kata"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:backgroundTint="@color/red"
        android:text="@string/view_katakana" />

    <TextView
        android:id="@+id/hira"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kata"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rec"
        android:elevation="2dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="50dp"
        android:text="@string/info_hira"
        android:textSize="18sp" />

    <Button
        android:id="@+id/showHira"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hira"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:backgroundTint="#36D800"
        android:text="@string/view_hiragana" />

    <TextView
        android:id="@+id/phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hira"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rec"
        android:elevation="2dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="100dp"
        android:text="@string/info_phrases"
        android:textSize="18sp" />

    <Button
        android:id="@+id/greetings"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phrase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-98dp"
        android:text="@string/basic_greetings" />

    <Button
        android:id="@+id/phrases"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/greetings"
        android:layout_centerHorizontal="true"
        android:text="@string/basic_phrases" />
</RelativeLayout>