<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.GreetingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:ignore="ScrollViewSize">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/greetings"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/greeting1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:elevation="2dp"
            android:padding="15dp"
            android:text="@string/greeting1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/greeting2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/greeting1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:elevation="2dp"
            android:padding="15dp"
            android:text="@string/greeting2"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/greeting3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/greeting2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:elevation="2dp"
            android:padding="15dp"
            android:text="@string/greeting3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/greeting4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/greeting3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:elevation="2dp"
            android:padding="15dp"
            android:text="@string/greeting4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/greeting5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/greeting4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:elevation="2dp"
            android:padding="15dp"
            android:text="@string/greeting5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/greeting6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/greeting5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:elevation="2dp"
            android:padding="15dp"
            android:text="@string/greeting6"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/greeting7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/greeting6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:elevation="2dp"
            android:padding="15dp"
            android:text="@string/greeting7"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/greeting8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/greeting7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:elevation="2dp"
            android:padding="15dp"
            android:text="@string/greeting8"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/greeting9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/greeting8"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:elevation="2dp"
            android:padding="15dp"
            android:text="@string/greeting9"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/greeting10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/greeting9"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:elevation="2dp"
            android:padding="15dp"
            android:text="@string/greeting10"
            android:textSize="18sp" />

    </RelativeLayout>

</ScrollView>