<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".old.OldActivity2">

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rec"
            android:elevation="2dp">

            <TextView
                android:id="@+id/attempts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/attempts"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/score"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="40dp"
                android:text="@string/time"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/attemptsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/zero"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/scoreValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/zero"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/timeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/initTime"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <TextView
        android:id="@+id/showChar"
        android:layout_width="225dp"
        android:layout_height="220dp"
        android:layout_below="@+id/card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:background="@drawable/border_transparent"
        android:gravity="center"
        android:textSize="150sp" />

    <Spinner
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showChar"
        android:layout_centerHorizontal="true"
        android:textSize="24sp" />

    <Button
        android:id="@+id/generateChar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options"
        android:layout_centerHorizontal="true"
        android:text="@string/generate_character" />

    <TextView
        android:id="@+id/choices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generateChar"
        android:layout_centerInParent="true"
        android:text="@string/choices"
        android:textSize="20sp" />

    <Button
        android:id="@+id/choice1"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choices"
        android:layout_toStartOf="@+id/choice2" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choices"
        android:layout_centerInParent="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <Button
        android:id="@+id/choice3"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choices"
        android:layout_toEndOf="@+id/choice2" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/reset" />

    <Switch
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset"
        android:text="5 Characters Only (Debug)"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</RelativeLayout>